# zksync-era

./: Cargo.toml
core/lib/types/: Cargo.toml
core/lib/utils/: Cargo.toml
core/lib/utils/src/: bytecode.rs
core/lib/vm/: Cargo.toml
core/tests/test_account/src/: lib.rs
sdk/zksync-rs/src/: lib.rs
sdk/zksync-rs/src/operations/: deploy_contract.rs
