[package]
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
categories = ["cryptography"]
edition = "2018"
homepage = "https://zksync.io/"
keywords = ["blockchain", "zksync"]
license = "Apache-2.0"
name = "zksync_utils"
repository = "https://github.com/matter-labs/zksync-2"
version = "1.0.0"

[dependencies]
zkevm_opcode_defs = {git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "main"}
zksync_basic_types = {path = "../../lib/basic_types", version = "1.0"}
#zk_evm = { path = "../../../../zk_evm" }

anyhow = "1.0"
bigdecimal = {version = "=0.2.0", features = ["serde"]}
envy = "0.4"
futures = "0.3"
hex = "0.4"
num = {version = "0.3.1", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
tokio = {version = "1", features = ["time"]}

[dev-dependencies]
serde_json = "1.0.0"
