[package]
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
categories = ["cryptography"]
edition = "2018"
homepage = "https://zksync.io/"
keywords = ["blockchain", "zksync"]
license = "Apache-2.0"
name = "vm"
repository = "https://github.com/matter-labs/zksync-2"
version = "0.1.0"

[dependencies]
zkevm-assembly = {git = "https://github.com/matter-labs/era-zkEVM-assembly.git", branch = "main"}
zksync_config = {path = "../config", version = "1.0"}
zksync_crypto = {path = "../crypto", version = "1.0"}
zksync_state = {path = "../state", version = "1.0"}
zksync_storage = {path = "../storage", version = "1.0"}
zksync_types = {path = "../types", version = "1.0"}
zksync_utils = {path = "../utils", version = "1.0"}

zk_evm = {git = "https://github.com/matter-labs/era-zk_evm.git", branch = "main"}
zksync_contracts = {path = "../contracts"}

hex = "0.4"
itertools = "0.10"
metrics = "0.20"
once_cell = "1.7"
thiserror = "1.0"
vlog = {path = "../../lib/vlog", version = "1.0"}

tracing = "0.1"

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.0.2"
